[project]
name = "rag-openai-agent-sdk-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langgraph>=1.1.9",
    "openai>=2.32.0",
    "openai-agents>=0.14.6",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "supabase>=2.29.0",
    "tiktoken>=0.12.0",
    "unicorn>=2.1.4",
    "uvicorn[standard]>=0.46.0",
]
